major things completed upto pagination

--- a/Public/admin/admin.html
+++ b/Public/admin/admin.html
@@ -119,6 +119,12 @@
       <tbody></tbody>
     </table>
   </div>
+  <div id="paginationControls">
+  <button onclick="prevPage()">Previous</button>
+  <span id="pageNumber">1</span>
+  <button onclick="nextPage()">Next</button>
+</div>
+
 
   <!-- ===== CALENDAR ===== -->
 
