pop-up confirmation message

--- a/Public/admin/admin.html
+++ b/Public/admin/admin.html
@@ -167,6 +167,17 @@
 
   </div>
 </div>
+<!-- confirmation -->
+<div id="confirmModal" class="modal">
+  <div class="modal-content">
+    <h3 id="modalTitle">Confirm Action</h3>
+    <p id="modalMessage">Are you sure?</p>
+    <div class="modal-buttons">
+      <button id="cancelBtn">Cancel</button>
+      <button id="confirmBtn">Confirm</button>
+    </div>
+  </div>
+</div>
 
 </body>
 <script src="admin.js" defer></script>
